--- a/nos-animaux.html
+++ b/nos-animaux.html
@@ -20,7 +20,7 @@ title: Nos 9 Compagnons
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-7xl mx-auto">
             
             <!-- GoodVisor du Gelon -->
-            <div class="bg-white rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
+            <div class="bg-gradient-to-br from-poilu-soleil/20 to-amber-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
                 <div class="h-48 bg-gradient-to-br from-amber-400 to-orange-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">GoodVisor du Gelon</h3>
@@ -35,7 +35,7 @@ title: Nos 9 Compagnons
             </div>
 
             <!-- Comme d'habitude -->
-            <div class="bg-white rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
+            <div class="bg-gradient-to-br from-poilu-turquoise/20 to-emerald-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
                 <div class="h-48 bg-gradient-to-br from-green-400 to-emerald-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Comme d'habitude</h3>
@@ -50,7 +50,7 @@ title: Nos 9 Compagnons
             </div>
 
             <!-- Mako -->
-            <div class="bg-white rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
+            <div class="bg-gradient-to-br from-poilu-roy/20 to-cyan-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
                 <div class="h-48 bg-gradient-to-br from-blue-400 to-cyan-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Mako</h3>
@@ -65,7 +65,7 @@ title: Nos 9 Compagnons
             </div>
 
             <!-- Hawaï -->
-            <div class="bg-white rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
+            <div class="bg-gradient-to-br from-pink-200/50 to-rose-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
                 <div class="h-48 bg-gradient-to-br from-pink-400 to-rose-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Hawaï</h3>
@@ -80,7 +80,7 @@ title: Nos 9 Compagnons
             </div>
 
             <!-- Mowgli -->
-            <div class="bg-white rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
+            <div class="bg-gradient-to-br from-poilu-soleil/25 to-amber-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
                 <div class="h-48 bg-gradient-to-br from-yellow-400 to-amber-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Mowgli</h3>
@@ -95,7 +95,7 @@ title: Nos 9 Compagnons
             </div>
 
             <!-- Yellow -->
-            <div class="bg-white rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
+            <div class="bg-gradient-to-br from-poilu-soleil/30 to-yellow-100/40 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
                 <div class="h-48 bg-gradient-to-br from-poilu-soleil to-yellow-400"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Yellow</h3>
@@ -110,7 +110,7 @@ title: Nos 9 Compagnons
             </div>
 
             <!-- Téthys -->
-            <div class="bg-white rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
+            <div class="bg-gradient-to-br from-poilu-turquoise/25 to-blue-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
                 <div class="h-48 bg-gradient-to-br from-poilu-turquoise to-blue-400"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Téthys</h3>
@@ -125,7 +125,7 @@ title: Nos 9 Compagnons
             </div>
 
             <!-- Nyx -->
-            <div class="bg-white rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
+            <div class="bg-gradient-to-br from-poilu-roy/25 to-indigo-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
                 <div class="h-48 bg-gradient-to-br from-purple-400 to-indigo-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Nyx</h3>
@@ -140,7 +140,7 @@ title: Nos 9 Compagnons
             </div>
 
             <!-- Phuket -->
-            <div class="bg-white rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
+            <div class="bg-gradient-to-br from-poilu-turquoise/20 to-cyan-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden transform hover:scale-105 transition-all duration-500">
                 <div class="h-48 bg-gradient-to-br from-teal-400 to-cyan-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Phuket</h3>
@@ -158,7 +158,7 @@ title: Nos 9 Compagnons
 
         <!-- Section communauté -->
         <div class="mt-20 text-center">
-            <div class="bg-white/80 backdrop-blur-sm rounded-3xl p-8 max-w-4xl mx-auto shadow-2xl">
+            <div class="bg-gradient-to-br from-poilu-roy/15 to-poilu-soleil/10 backdrop-blur-sm rounded-3xl p-8 max-w-4xl mx-auto shadow-2xl border border-poilu-turquoise/30">
                 <h2 class="text-3xl font-bold text-poilu-roy mb-6">
                     Une Grande Famille Unie
                 </h2>
