Amélioration majeure de l'accessibilité et des contrastes
 Corrections des contrastes :
- Remplacement de text-poilu-gris par text-gray-700 (meilleur contraste)
- Cartes TikTok/Instagram avec fond blanc/95 au lieu de dégradés transparents
- Amélioration de la lisibilité sur tous les arrière-plans

 Accessibilité WCAG :
- Ajout d'attributs aria-label sur tous les liens sociaux
- Attributs aria-expanded et aria-controls sur le menu mobile
- Ajout de aria-hidden='true' sur les icônes décoratives
- Focus states avec ring-focus pour navigation clavier
- Rôles sémantiques (banner, navigation) sur les sections

 Corrections visuelles :
- Titre Instagram @la_communaute_des_9_poilus avec break-words et taille réduite
- Espacement amélioré avec leading-tight et leading-relaxed
- Meilleure hiérarchie visuelle des contenus

Ces améliorations respectent les standards WCAG 2.1 AA

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ title: Contact
             <h1 class="text-4xl md:text-6xl font-heading font-bold text-poilu-roy mb-6">
                 Rejoignez Notre Communauté
             </h1>
-            <p class="text-xl md:text-2xl text-poilu-gris max-w-3xl mx-auto">
+            <p class="text-xl md:text-2xl text-gray-700 max-w-3xl mx-auto">
                 Entrons en contact et partageons ensemble notre passion pour nos compagnons à quatre pattes !
             </p>
         </div>
@@ -33,10 +33,10 @@ title: Contact
                             </div>
                             <div>
                                 <h3 class="text-xl font-bold text-poilu-roy">TikTok</h3>
-                                <p class="text-poilu-gris">Vidéos courtes et amusantes</p>
+                                <p class="text-gray-700">Vidéos courtes et amusantes</p>
                             </div>
                         </div>
-                        <p class="text-poilu-gris mb-4">
+                        <p class="text-gray-700 mb-4">
                             Découvrez nos moments quotidiens en vidéo ! Behind the scenes, moments drôles et attendrissants avec nos 9 compagnons.
                         </p>
                         <a href="https://www.tiktok.com/@communaute_9_poilus" target="_blank" 
@@ -58,10 +58,10 @@ title: Contact
                             </div>
                             <div>
                                 <h3 class="text-xl font-bold text-poilu-roy">Instagram</h3>
-                                <p class="text-poilu-gris">Photos et stories</p>
+                                <p class="text-gray-700">Photos et stories</p>
                             </div>
                         </div>
-                        <p class="text-poilu-gris mb-4">
+                        <p class="text-gray-700 mb-4">
                             Les plus belles photos de nos aventures ! Portraits, paysages et moments de complicité avec GoodVisor, Yellow, Téthys et tous les autres.
                         </p>
                         <a href="https://www.instagram.com/la_communaute_des_9_poilus" target="_blank" 
@@ -89,7 +89,7 @@ title: Contact
                                 </div>
                                 <div>
                                     <h4 class="font-bold text-poilu-roy mb-2">Partagez vos histoires</h4>
-                                    <p class="text-poilu-gris">
+                                    <p class="text-gray-700">
                                         Vous avez aussi des compagnons à quatre pattes ? Taguez-nous dans vos publications avec #Les9Poilus pour partager vos moments !
                                     </p>
                                 </div>
@@ -101,7 +101,7 @@ title: Contact
                                 </div>
                                 <div>
                                     <h4 class="font-bold text-poilu-roy mb-2">Communauté bienveillante</h4>
-                                    <p class="text-poilu-gris">
+                                    <p class="text-gray-700">
                                         Notre communauté est un espace de partage, de conseils et de soutien entre amoureux des animaux. Respectons-nous mutuellement !
                                     </p>
                                 </div>
@@ -113,7 +113,7 @@ title: Contact
                                 </div>
                                 <div>
                                     <h4 class="font-bold text-poilu-roy mb-2">Collaborations</h4>
-                                    <p class="text-poilu-gris">
+                                    <p class="text-gray-700">
                                         Marques éthiques et responsables, refuges, associations... N'hésitez pas à nous contacter via nos réseaux sociaux pour des partenariats alignés avec nos valeurs.
                                     </p>
                                 </div>
