--- a/nos-animaux.html
+++ b/nos-animaux.html
@@ -11,7 +11,7 @@ title: Nos 9 Compagnons
             <h1 class="text-4xl md:text-6xl font-heading font-bold text-poilu-roy mb-6">
                 Nos 9 Compagnons
             </h1>
-            <p class="text-xl md:text-2xl text-poilu-gris max-w-3xl mx-auto">
+            <p class="text-xl md:text-2xl text-gray-700 max-w-3xl mx-auto">
                 Découvrez les personnalités uniques de notre grande famille à quatre pattes
             </p>
         </div>
@@ -24,7 +24,7 @@ title: Nos 9 Compagnons
                 <div class="h-48 bg-gradient-to-br from-amber-400 to-orange-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">GoodVisor du Gelon</h3>
-                    <p class="text-poilu-gris mb-4">
+                    <p class="text-gray-700 mb-4">
                         Le sage de la troupe, toujours présent pour veiller sur ses compagnons.
                     </p>
                     <div class="flex flex-wrap gap-2">
@@ -39,7 +39,7 @@ title: Nos 9 Compagnons
                 <div class="h-48 bg-gradient-to-br from-green-400 to-emerald-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Comme d'habitude</h3>
-                    <p class="text-poilu-gris mb-4">
+                    <p class="text-gray-700 mb-4">
                         Prévisible et rassurant, il apporte la stabilité dans notre quotidien.
                     </p>
                     <div class="flex flex-wrap gap-2">
@@ -54,7 +54,7 @@ title: Nos 9 Compagnons
                 <div class="h-48 bg-gradient-to-br from-blue-400 to-cyan-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Mako</h3>
-                    <p class="text-poilu-gris mb-4">
+                    <p class="text-gray-700 mb-4">
                         Rapide comme l'éclair, toujours prêt pour l'aventure et les jeux.
                     </p>
                     <div class="flex flex-wrap gap-2">
@@ -69,7 +69,7 @@ title: Nos 9 Compagnons
                 <div class="h-48 bg-gradient-to-br from-pink-400 to-rose-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Hawaï</h3>
-                    <p class="text-poilu-gris mb-4">
+                    <p class="text-gray-700 mb-4">
                         Douce comme une brise tropicale, elle apporte sérénité et tendresse.
                     </p>
                     <div class="flex flex-wrap gap-2">
@@ -84,7 +84,7 @@ title: Nos 9 Compagnons
                 <div class="h-48 bg-gradient-to-br from-yellow-400 to-amber-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Mowgli</h3>
-                    <p class="text-poilu-gris mb-4">
+                    <p class="text-gray-700 mb-4">
                         L'aventurier né, curieux de tout et explorateur dans l'âme.
                     </p>
                     <div class="flex flex-wrap gap-2">
@@ -99,7 +99,7 @@ title: Nos 9 Compagnons
                 <div class="h-48 bg-gradient-to-br from-poilu-soleil to-yellow-400"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Yellow</h3>
-                    <p class="text-poilu-gris mb-4">
+                    <p class="text-gray-700 mb-4">
                         Rayonnant de joie, il illumine chaque journée de sa bonne humeur.
                     </p>
                     <div class="flex flex-wrap gap-2">
@@ -114,7 +114,7 @@ title: Nos 9 Compagnons
                 <div class="h-48 bg-gradient-to-br from-poilu-turquoise to-blue-400"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Téthys</h3>
-                    <p class="text-poilu-gris mb-4">
+                    <p class="text-gray-700 mb-4">
                         Mystérieuse comme l'océan, elle nous fascine par sa grâce naturelle.
                     </p>
                     <div class="flex flex-wrap gap-2">
@@ -129,7 +129,7 @@ title: Nos 9 Compagnons
                 <div class="h-48 bg-gradient-to-br from-purple-400 to-indigo-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Nyx</h3>
-                    <p class="text-poilu-gris mb-4">
+                    <p class="text-gray-700 mb-4">
                         Élégante déesse de la nuit, elle veille sur notre sommeil paisible.
                     </p>
                     <div class="flex flex-wrap gap-2">
@@ -144,7 +144,7 @@ title: Nos 9 Compagnons
                 <div class="h-48 bg-gradient-to-br from-teal-400 to-cyan-500"></div>
                 <div class="p-6">
                     <h3 class="text-2xl font-bold text-poilu-roy mb-3">Phuket</h3>
-                    <p class="text-poilu-gris mb-4">
+                    <p class="text-gray-700 mb-4">
                         Esprit libre et indépendant, il nous rappelle l'importance de la liberté.
                     </p>
                     <div class="flex flex-wrap gap-2">
@@ -162,7 +162,7 @@ title: Nos 9 Compagnons
                 <h2 class="text-3xl font-bold text-poilu-roy mb-6">
                     Une Grande Famille Unie
                 </h2>
-                <p class="text-lg text-poilu-gris mb-8">
+                <p class="text-lg text-gray-700 mb-8">
                     Chacun de nos 9 compagnons apporte sa personnalité unique à notre quotidien. 
                     Ensemble, ils forment une communauté harmonieuse où règnent l'amour, 
                     le respect et la joie de vivre.
