Optimisation des favicons pour 2025
 Configuration favicon moderne :
- Ajout support multi-plateforme optimisé (6 fichiers essentiels)
- favicon.ico + PNG 16x16/32x32 pour navigateurs
- apple-touch-icon 180x180 pour iOS/Safari
- android-icon 192x192 pour Android Chrome
- manifest.json mis à jour avec infos du site

 Manifest.json amélioré :
- Nom : 'La Communauté des 9 Poilus'
- Couleurs de thème : turquoise/soleil
- Support PWA basique

 Script de nettoyage inclus pour supprimer les 20+ fichiers inutiles
- Gardez seulement les 6 fichiers listés ci-dessus
- Les autres sont obsolètes (Windows Phone, tailles redondantes)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ description: "Bienvenue sur le site officiel des 9 Poilus"
                 La vraie vie d'une famille entourée de ses animaux<br>
                 <span class="font-script text-poilu-soleil">Entre rires, émotions et apprentissages</span>
             </p>
-            
+            <img src="/assets/images/9-poilus.png" alt="les9poilusetleurshumains">
+
             <!-- CTA Focus TikTok/Instagram -->
             <div class="space-y-6 md:space-y-0 md:space-x-6 md:flex md:justify-center mb-8">
                 <a href="https://www.tiktok.com/@communaute_9_poilus" target="_blank"
