OPTIMISATION SEO MASSIVE - Ciblage Amoureux des Animaux Savoie
 Stratégie SEO complète pour toucher tous les amoureux des animaux:

 META & STRUCTURE:
- Titles optimisés avec mots-clés refuge/adoption Savoie
- Meta descriptions enrichies (refuge familial, animaux rescapés)
- Keywords ciblés: refuge animaux Savoie, adoption chien chat, sauvetage
- Schema.org AnimalShelter avec géolocalisation Savoie
- Breadcrumbs sur toutes les pages

 SEO LOCAL SAVOIE:
- Page dédiée /refuge-savoie/ pour référencement local
- Couverture: Albertville, Chambéry, Tarentaise, Maurienne
- Services: adoption, sauvetage, conseils bien-être animal
- Zone d'intervention Rhône-Alpes clairement définie

 RÉSEAUX & PARTAGE:
- Open Graph optimisé pour Facebook/Instagram
- Twitter Cards configurées
- Liens réseaux sociaux intégrés (TikTok, Instagram)
- Images og-image pour partages

 TECHNIQUE:
- robots.txt optimisé pour indexation
- URLs canoniques configurées
- Meta robots index/follow
- Lazy loading maintenu

 MOTS-CLÉS CIBLÉS:
- Principaux: refuge animaux Savoie, adoption chien chat
- Émotionnels: amoureux des animaux, histoires touchantes
- Longue traîne: refuge familial animaux rescapés Savoie

Le site va maintenant toucher tous les amoureux des animaux en Savoie !

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,36 @@
 ---
 layout: default
-title: Contact
+title: "Contactez Notre Refuge Familial en Savoie - Adoptions & Conseils Animaux"
+description: "Contactez la Communauté des 9 Poilus en Savoie pour adoption d'animaux, conseils bien-être, soutien aux amoureux des animaux. Refuge familial ouvert aux rencontres et échanges."
+keywords: "contact refuge animaux Savoie, adoption animaux Savoie, conseils bien-être animal, refuge familial contact, amoureux animaux Rhône-Alpes"
 ---
+
+<!-- Schema.org pour la page contact -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ContactPage",
+  "name": "Contact - Refuge Familial en Savoie",
+  "description": "Contactez notre refuge familial pour adoption d'animaux et conseils bien-être",
+  "breadcrumb": {
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Accueil",
+        "item": "https://peakcl.github.io/Les9poilus"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Contact",
+        "item": "https://peakcl.github.io/Les9poilus/contact"
+      }
+    ]
+  }
+}
+</script>
 
 <div class="min-h-screen bg-gradient-to-br from-poilu-soleil/20 to-poilu-turquoise/30">
     <div class="container mx-auto px-4 py-20">
