--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
 ---
 layout: default
-title: "Accueil"
-description: "Bienvenue sur le site officiel des 9 Poilus"
+title: "Refuge Familial pour Animaux en Savoie - Communauté des 9 Poilus"
+description: "Découvrez notre refuge familial en Savoie : 9 animaux rescapés (chiens, chats, chevaux, âne) dans un cadre authentique. Histoires touchantes, conseils bien-être animal et quotidien d'amoureux des animaux."
+keywords: "refuge animaux Savoie, sanctuaire animal, adoption chien chat Savoie, bien-être animal, amoureux des animaux, sauvetage animaux, famille d'accueil animaux, protection animale Rhône-Alpes"
 ---
+
+<!-- Schema.org structured data pour le SEO -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "AnimalShelter",
+  "name": "La Communauté des 9 Poilus",
+  "description": "Refuge familial pour animaux en Savoie avec 9 compagnons rescapés",
+  "url": "https://peakcl.github.io/Les9poilus",
+  "address": {
+    "@type": "PostalAddress",
+    "addressRegion": "Savoie",
+    "addressCountry": "FR"
+  },
+  "founder": {
+    "@type": "Person",
+    "name": "La Communauté des 9 Poilus"
+  },
+  "sameAs": [
+    "https://www.tiktok.com/@communaute_9_poilus",
+    "https://www.instagram.com/la_communaute_des_9_poilus"
+  ]
+}
+</script>
 
 <!-- Hero Section -->
 <section class="bg-gradient-to-br from-poilu-roy via-poilu-turquoise to-poilu-soleil text-white relative overflow-hidden" role="banner" aria-label="Section d'accueil principale">
@@ -20,13 +45,23 @@ description: "Bienvenue sur le site officiel des 9 Poilus"
                 <span class="inline-block text-6xl mb-4 animate-pulse">🐾</span>
             </div>
             <h1 class="text-4xl md:text-6xl font-heading font-bold mb-6">
-                Bienvenue chez 
-                <span class="font-script text-poilu-soleil drop-shadow-lg">{{ site.title }}</span>
+                <span class="font-script text-poilu-soleil drop-shadow-lg">Refuge Familial en Savoie</span><br>
+                <span class="text-3xl md:text-4xl">La Communauté des 9 Poilus</span>
             </h1>
-            <p class="text-xl md:text-2xl mb-12 text-blue-100 font-body">
-                La vraie vie d'une famille entourée de ses animaux<br>
-                <span class="font-script text-poilu-soleil">Entre rires, émotions et apprentissages</span>
+            <p class="text-xl md:text-2xl mb-8 text-blue-100 font-body">
+                Un <strong>sanctuaire pour animaux rescapés</strong> au cœur de la Savoie<br>
+                <span class="font-script text-poilu-soleil">9 compagnons, 1 famille, des histoires d'amour infinies</span>
             </p>
+            
+            <!-- Sous-titre SEO -->
+            <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-6 mb-12 max-w-4xl mx-auto">
+                <h2 class="text-lg md:text-xl text-blue-100 mb-4">
+                    🏠 <strong>Refuge familial</strong> • 🐕 <strong>Chiens rescapés</strong> • 🐱 <strong>Chats sauvés</strong> • 🐎 <strong>Chevaux en liberté</strong> • 🫏 <strong>Âne de compagnie</strong>
+                </h2>
+                <p class="text-blue-200">
+                    Pour tous les <strong>amoureux des animaux</strong> qui croient aux secondes chances et au pouvoir guérisseur de l'amour inconditionnel.
+                </p>
+            </div>
             
             <!-- Image principale avec design intégré -->
             <div class="relative max-w-4xl mx-auto mb-12 hero-image-container">
