--- a/nos-anges.html
+++ b/nos-anges.html
@@ -1,8 +1,36 @@
 ---
 layout: default
-title: Nos Anges Gardiens
-description: "En mémoire de nos compagnons qui nous ont quittés - Praline, Kima, Kiwi et Litchi"
+title: "En Mémoire de Nos Anges Gardiens - Praline, Kima, Kiwi & Litchi"
+description: "Hommage à nos 4 compagnons disparus qui ont marqué notre refuge familial en Savoie : Praline et Kima nos chiennes bien-aimées, Kiwi et Litchi nos chats du cœur. Leurs histoires d'amour continuent de nous inspirer."
+keywords: "mémoire animaux disparus, hommage chien chat décédé, souvenir animaux compagnie, Savoie refuge familial, pont arc-en-ciel animaux, amour inconditionnel"
 ---
+
+<!-- Schema.org pour la page mémorial -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Nos Anges Gardiens - En Mémoire",
+  "description": "Page de mémoire dédiée à nos compagnons disparus : Praline, Kima, Kiwi et Litchi",
+  "breadcrumb": {
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Accueil",
+        "item": "https://peakcl.github.io/Les9poilus"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Nos Anges Gardiens",
+        "item": "https://peakcl.github.io/Les9poilus/nos-anges"
+      }
+    ]
+  }
+}
+</script>
 
 <div class="min-h-screen bg-gradient-to-br from-gray-50 via-blue-50 to-purple-50">
     <div class="container mx-auto px-4 py-20">
