--- a/nos-animaux.html
+++ b/nos-animaux.html
@@ -1,7 +1,36 @@
 ---
 layout: default
-title: Nos 9 Compagnons
+title: "Nos 9 Compagnons Rescapés - Chiens, Chats, Chevaux & Âne en Savoie"
+description: "Découvrez nos 9 animaux rescapés vivant en liberté dans notre refuge familial en Savoie : Mako le chien leader, 6 chats sauvés, 2 chevaux et GoodVisor notre âne. Histoires touchantes d'adoption et de sauvetage."
+keywords: "animaux rescapés Savoie, adoption chien chat Savoie, refuge animaux, chiens sauvés, chats errants, chevaux liberté, âne de compagnie, sauvetage animaux Rhône-Alpes"
 ---
+
+<!-- Schema.org pour les animaux -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Nos 9 Compagnons Rescapés",
+  "description": "Découvrez les histoires de nos 9 animaux rescapés dans notre refuge familial en Savoie",
+  "breadcrumb": {
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Accueil",
+        "item": "https://peakcl.github.io/Les9poilus"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Nos Animaux",
+        "item": "https://peakcl.github.io/Les9poilus/nos-animaux"
+      }
+    ]
+  }
+}
+</script>
 
 <div class="min-h-screen bg-gradient-to-br from-poilu-soleil/20 to-poilu-turquoise/30">
     <div class="container mx-auto px-4 py-20">
@@ -9,11 +38,22 @@ title: Nos 9 Compagnons
         <!-- Header -->
         <div class="text-center mb-16">
             <h1 class="text-4xl md:text-6xl font-heading font-bold text-poilu-roy mb-6">
-                Nos 9 Compagnons
+                Nos 9 Compagnons Rescapés
             </h1>
-            <p class="text-xl md:text-2xl text-gray-700 max-w-3xl mx-auto mb-8">
-                Découvrez les personnalités uniques de notre grande famille à quatre pattes
+            <p class="text-xl md:text-2xl text-gray-700 max-w-4xl mx-auto mb-8">
+                <strong>Refuge familial en Savoie</strong> : Découvrez les histoires touchantes de nos <strong>9 animaux sauvés</strong> qui ont trouvé l'amour et la sécurité dans notre sanctuaire
             </p>
+            
+            <!-- Sous-titre SEO riche -->
+            <div class="bg-white/80 backdrop-blur-sm rounded-2xl p-6 max-w-5xl mx-auto mb-12 shadow-lg">
+                <h2 class="text-lg md:text-xl text-gray-800 mb-4">
+                    🏠 <strong>Refuge & Adoption</strong> • 🐕 <strong>1 Chien Leader</strong> • 🐱 <strong>6 Chats Sauvés</strong> • 🐎 <strong>2 Chevaux Libres</strong> • 🫏 <strong>1 Âne Complice</strong>
+                </h2>
+                <p class="text-gray-700">
+                    Chaque animal a sa propre histoire de <strong>sauvetage</strong> et de <strong>renaissance</strong>. 
+                    Pour tous les <strong>amoureux des animaux</strong> qui croient aux secondes chances !
+                </p>
+            </div>
             
             <!-- Navigation par espèces -->
             <div class="flex flex-wrap justify-center gap-4 mb-12">
