CORRECTION SEO MAJEURE - Famille vs Refuge
 ERREUR CORRIGÉE : Nous ne sommes PAS un refuge !

 NOUVEAU POSITIONNEMENT SEO :
- Famille passionnée d'animaux en Savoie
- Quotidien authentique avec 9 compagnons
- Partage d'expériences vécues
- Conseils basés sur notre vécu familial

 CHANGEMENTS EFFECTUÉS :
- _config.yml : 'Famille Passionnée' au lieu de 'Refuge'
- index.html : 'Quotidien authentique d'une famille'
- nos-animaux.html : 'Nos compagnons' vs 'animaux rescapés'
- contact.html : Échanges vs adoptions
- refuge-savoie.html  notre-histoire.html

 MOTS-CLÉS CORRIGÉS :
-  refuge animaux, adoption, sauvetage
-  famille avec animaux, quotidien, vie avec chiens chats
-  histoires touchantes, bien-être animal vécu
-  famille passionnée animaux Savoie

 Schema.org mis à jour : Person/Family au lieu d'AnimalShelter

Maintenant le SEO reflète la réalité : une famille qui partage !

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "Contactez Notre Refuge Familial en Savoie - Adoptions & Conseils Animaux"
-description: "Contactez la Communauté des 9 Poilus en Savoie pour adoption d'animaux, conseils bien-être, soutien aux amoureux des animaux. Refuge familial ouvert aux rencontres et échanges."
-keywords: "contact refuge animaux Savoie, adoption animaux Savoie, conseils bien-être animal, refuge familial contact, amoureux animaux Rhône-Alpes"
+title: "Contactez Notre Famille Passionnée d'Animaux en Savoie - 9 Poilus"
+description: "Contactez la Communauté des 9 Poilus en Savoie pour échanger sur notre quotidien avec nos animaux, conseils bien-être animal et partager votre passion des compagnons à quatre pattes."
+keywords: "contact famille animaux Savoie, conseils bien-être animal, amoureux animaux Rhône-Alpes, quotidien avec animaux, famille passionnée animaux"
 ---
 
 <!-- Schema.org pour la page contact -->
