--- a/nos-animaux.html
+++ b/nos-animaux.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "Nos 9 Compagnons Rescapés - Chiens, Chats, Chevaux & Âne en Savoie"
-description: "Découvrez nos 9 animaux rescapés vivant en liberté dans notre refuge familial en Savoie : Mako le chien leader, 6 chats sauvés, 2 chevaux et GoodVisor notre âne. Histoires touchantes d'adoption et de sauvetage."
-keywords: "animaux rescapés Savoie, adoption chien chat Savoie, refuge animaux, chiens sauvés, chats errants, chevaux liberté, âne de compagnie, sauvetage animaux Rhône-Alpes"
+title: "Nos 9 Compagnons - Chiens, Chats, Chevaux & Âne en Savoie"
+description: "Découvrez nos 9 compagnons vivant avec notre famille en Savoie : Mako notre chien, 6 chats complices, 2 chevaux et GoodVisor notre âne. Histoires touchantes et quotidien d'une famille passionnée d'animaux."
+keywords: "famille avec animaux Savoie, chiens chats chevaux âne, quotidien animaux, vie avec animaux, famille passionnée animaux, bien-être animal Rhône-Alpes"
 ---
 
 <!-- Schema.org pour les animaux -->
@@ -38,20 +38,20 @@ keywords: "animaux rescapés Savoie, adoption chien chat Savoie, refuge animaux,
         <!-- Header -->
         <div class="text-center mb-16">
             <h1 class="text-4xl md:text-6xl font-heading font-bold text-poilu-roy mb-6">
-                Nos 9 Compagnons Rescapés
+                Nos 9 Compagnons
             </h1>
             <p class="text-xl md:text-2xl text-gray-700 max-w-4xl mx-auto mb-8">
-                <strong>Refuge familial en Savoie</strong> : Découvrez les histoires touchantes de nos <strong>9 animaux sauvés</strong> qui ont trouvé l'amour et la sécurité dans notre sanctuaire
+                <strong>Famille passionnée en Savoie</strong> : Découvrez les personnalités uniques de nos <strong>9 compagnons</strong> qui partagent notre quotidien et notre amour des animaux
             </p>
             
             <!-- Sous-titre SEO riche -->
             <div class="bg-white/80 backdrop-blur-sm rounded-2xl p-6 max-w-5xl mx-auto mb-12 shadow-lg">
                 <h2 class="text-lg md:text-xl text-gray-800 mb-4">
-                    🏠 <strong>Refuge & Adoption</strong> • 🐕 <strong>1 Chien Leader</strong> • 🐱 <strong>6 Chats Sauvés</strong> • 🐎 <strong>2 Chevaux Libres</strong> • 🫏 <strong>1 Âne Complice</strong>
+                    🏠 <strong>Vie de Famille</strong> • 🐕 <strong>1 Chien Fidèle</strong> • 🐱 <strong>6 Chats Complices</strong> • 🐎 <strong>2 Chevaux Libres</strong> • 🫏 <strong>1 Âne Attachant</strong>
                 </h2>
                 <p class="text-gray-700">
-                    Chaque animal a sa propre histoire de <strong>sauvetage</strong> et de <strong>renaissance</strong>. 
-                    Pour tous les <strong>amoureux des animaux</strong> qui croient aux secondes chances !
+                    Chaque animal a sa propre <strong>personnalité unique</strong> et apporte sa <strong>joie de vivre</strong> au quotidien. 
+                    Pour tous les <strong>amoureux des animaux</strong> qui aiment découvrir leurs histoires !
                 </p>
             </div>
             
@@ -351,7 +351,7 @@ keywords: "animaux rescapés Savoie, adoption chien chat Savoie, refuge animaux,
             <div class="animal-card bg-gradient-to-br from-poilu-soleil/20 to-amber-100/30 backdrop-blur-sm rounded-3xl shadow-2xl overflow-hidden">
                 <div class="animal-photo">
                     <!-- Zone photo pour GoodVisor du Gelon -->
-                    <img src="/assets/images/animaux/good.png" 
+                    <img src="/assets/images/animaux/good.jpg" 
                          alt="GoodVisor du Gelon dit Good - Cheval noble et protecteur" 
                          loading="lazy"
                          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
